package computerAssemble.computer;

public interface Computer{
    void showDetails();
}
